--- a/index.html
+++ b/index.html
@@ -3143,7 +3143,7 @@
 										<div class="ub-buttons align-button-center orientation-button-row ub-flex-wrap wp-block-ub-button"
 											id="ub-button-3f655dad-fb61-42d0-a8d2-8a1ebd4f3445">
 											<div class="ub-button-container">
-												<a href="https://damangames.store/go/" target="_self"
+												<a href="https://damangames.bet/#/register?invitationCode=OVbLR334770" target="_self"
 													rel="noopener noreferrer nofollow"
 													class="ub-button-block-main ub-button-medium ub-button-flex-medium"
 													role="button">
@@ -3163,7 +3163,7 @@
 										<div class="ub-buttons align-button-center orientation-button-row ub-flex-wrap wp-block-ub-button"
 											id="ub-button-b111e1e0-5720-42c3-b42d-7feaa90a7fe5">
 											<div class="ub-button-container">
-												<a href="https://damangames.store/go/" target="_self"
+												<a href="https://damangames.bet/#/register?invitationCode=OVbLR334770" target="_self"
 													rel="noopener noreferrer nofollow"
 													class="ub-button-block-main ub-button-medium ub-button-flex-medium"
 													role="button">
